--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,107 +10,146 @@
     tools:context="methamphibians.tk.simpleruntrack.activity_main"
     android:background="@android:color/background_light">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Time:"
-            android:id="@+id/textView"
-            android:textColor="@color/abc_primary_text_disable_only_material_light" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="00:00:00"
-            android:id="@+id/timeView"
-            android:textColor="@color/abc_primary_text_disable_only_material_light" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Miles:"
-            android:id="@+id/textView2"
-            android:textColor="@color/abc_primary_text_disable_only_material_light" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="0.0"
-            android:id="@+id/milesView"
-            android:textColor="@color/abc_primary_text_disable_only_material_light" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Pace:"
-            android:id="@+id/textView5"
-            android:textColor="@color/abc_primary_text_disable_only_material_light" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="0.0"
-            android:id="@+id/paceView"
-            android:textColor="@color/abc_primary_text_disable_only_material_light" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Accuracy:"
-            android:id="@+id/textView3"
-            android:textColor="@android:color/primary_text_light" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="10000"
-            android:id="@+id/accView"
-            android:textColor="@color/abc_primary_text_disable_only_material_light" />
-
-        <RelativeLayout
+        <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
-                android:layout_width="fill_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pause"
-                android:id="@+id/pauseButton"
-                android:layout_gravity="center_horizontal"
-                android:layout_above="@+id/button"
-                android:layout_centerHorizontal="true"
-                android:singleLine="true"
-                android:visibility="visible"
-                android:contextClickable="false"
-                android:enabled="false" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Time:  "
+                android:id="@+id/textView"
+                android:textColor="@color/abc_primary_text_disable_only_material_light" />
 
-            <Button
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Start Run"
-                android:id="@+id/button"
-                android:layout_gravity="center_horizontal"
-                android:singleLine="false"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
-        </RelativeLayout>
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="00:00:00"
+                android:id="@+id/timeView"
+                android:textColor="@color/abc_primary_text_disable_only_material_light" />
+        </TableRow>
 
-    </LinearLayout>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Miles:  "
+                android:id="@+id/textView7"
+                android:textColor="@color/abc_primary_text_disable_only_material_light" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="0.0"
+                android:id="@+id/milesView"
+                android:textColor="@color/abc_primary_text_disable_only_material_light" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Pace:"
+                android:id="@+id/textView8"
+                android:textColor="@color/abc_primary_text_disable_only_material_light" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="0.0"
+                android:id="@+id/paceView"
+                android:textColor="@color/abc_primary_text_disable_only_material_light" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Speed:"
+                android:id="@+id/textView9"
+                android:textColor="#000000" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="0.0"
+                android:id="@+id/speedView"
+                android:textColor="#000000" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="43dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Accuracy:"
+                android:id="@+id/textView10"
+                android:textColor="@android:color/primary_text_light" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="10000"
+                android:id="@+id/accView"
+                android:textColor="@color/abc_primary_text_disable_only_material_light" />
+        </TableRow>
+
+    </TableLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Pause"
+            android:id="@+id/pauseButton"
+            android:layout_gravity="center_horizontal"
+            android:layout_above="@+id/button"
+            android:layout_centerHorizontal="true"
+            android:singleLine="true"
+            android:visibility="visible"
+            android:contextClickable="false"
+            android:enabled="false" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start Run"
+            android:id="@+id/button"
+            android:layout_gravity="center_horizontal"
+            android:singleLine="false"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
 
 </RelativeLayout>
